# Split-Inference-Demo

./: .gitignore  README.md  client.py  head_model.py  head_model_weights.py  requirements.txt  save_embedding_weights.py  save_tflite_model.py  save_tokenizer_files.py  server.py
client_app/: client.py  custom_bpe_tokenizer.py  head_model.py  head_model_arch.py  pyproject.toml
server_app/: server.py
whole_app/: README.md  client.py  main.dart  pubspec.yaml  pyproject.toml
whole_app/android/app/: build.gradle.kts
whole_app/android/app/src/main/: AndroidManifest.xml
whole_app/android/app/src/main/kotlin/com/example/whole_app/: MainActivity.kt
whole_app/ios/Runner/: Info.plist
whole_app/ios/Runner.xcodeproj/: project.pbxproj
whole_app/lib/: main.dart  text_generator.dart
whole_app/linux/: CMakeLists.txt
whole_app/linux/flutter/: generated_plugins.cmake
whole_app/linux/runner/: my_application.cc
whole_app/macos/Runner.xcodeproj/: project.pbxproj
whole_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
whole_app/macos/Runner/Configs/: AppInfo.xcconfig
whole_app/test/: widget_test.dart
whole_app/web/: index.html  manifest.json
whole_app/windows/: CMakeLists.txt
whole_app/windows/flutter/: generated_plugins.cmake
whole_app/windows/runner/: Runner.rc  main.cpp
