[project]
name = "Split_Inference_Client"
version = "1.0.0"
description = "GPT-2 Split inference client"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name="Dharam singh meena", email="dharamsinghmeena2000@gamil.com"}
]
dependencies = [
    "flet",
    "numpy",
    "regex"
]

[tool.flet]
product="NewNameForSplit"
build_number = 1

[tool.flet.app]
path = "."
module = "client"

[tool.flet.permissions]
permissions = ["internet"]