[project]
name="gpt2_app"
version="1.0.0"
description="GPT-2 TFLite model on-device demo"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dharam", email="dharamsinghmeena2000@gamil.com"}
]
dependencies = [
    "flet",
    "numpy",
]

[tool.flet]
product = "GPT2TFLiteApp"

[tool.flet.app]
path = "."
module = "client"
